figue/src/schema/snapshots/figue__schema__tests__config_skipped_field_errors_when_not_defaulted.snap
---
source: figue/src/schema/tests.rs
expression: stripped
---
Error: config field `skipped` is skipped but has no default value
   ╭─[ <unknown>:2:8 ]
   │
 2 │ struct ArgsWithSkippedNonDefaultConfigField {
   │        ──────────────────┬─────────────────  
   │                          ╰─────────────────── defined at figue/src/schema/tests.rs:435
   │                          │                   
   │                          ╰─────────────────── config field `skipped` is skipped but has no default value
   │ 
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
